[package]
name = "gradhermetic-emulator"
version = "0.1.0"
edition = "2021"
description = "Gradhermetic roller blind emulator for Home Assistant via MQTT"
license = "MIT"

[dependencies]
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
